syntax = "proto3";
package Persistify.Services;

message AndSearchQuery {
   repeated SearchQuery Queries = 2;
}
message BoolFieldValue {
   bool Value = 1;
   string FieldName = 2;
}
message CreateDocumentRequest {
   string TemplateName = 1;
   repeated TextFieldValue TextFieldValues = 2;
   repeated NumberFieldValue NumberFieldValues = 3;
   repeated BoolFieldValue BoolFieldValues = 4;
}
message CreateDocumentResponse {
   int32 DocumentId = 1;
}
message DeleteDocumentRequest {
   string TemplateName = 1;
   int32 DocumentId = 2;
}
message DeleteDocumentResponse {
}
message Document {
   int32 Id = 1;
   repeated TextFieldValue TextFieldValues = 2;
   repeated NumberFieldValue NumberFieldValues = 3;
   repeated BoolFieldValue BoolFieldValues = 4;
}
message ExactBoolSearchQuery {
   bool Value = 2;
   string FieldName = 3;
}
message ExactNumberSearchQuery {
   double Value = 2;
   string FieldName = 3;
}
message ExactTextSearchQuery {
   string Value = 2;
   string FieldName = 3;
}
message FullTextSearchQuery {
   string Value = 2;
   string FieldName = 3;
}
message GetDocumentRequest {
   string TemplateName = 1;
   int32 DocumentId = 2;
}
message GetDocumentResponse {
   Document Document = 1;
}
message GreaterNumberSearchQuery {
   string FieldName = 2;
   double Value = 3;
}
message LessNumberSearchQuery {
   string FieldName = 2;
   double Value = 3;
}
message NotSearchQuery {
   repeated SearchQuery Queries = 2;
}
message NumberFieldValue {
   double Value = 1;
   string FieldName = 2;
}
message OrSearchQuery {
   repeated SearchQuery Queries = 2;
}
message Pagination {
   int32 PageNumber = 1;
   int32 PageSize = 2;
}
message PrefixTextSearchQuery {
   string Value = 2;
   string FieldName = 3;
}
message RangeNumberSearchQuery {
   string FieldName = 2;
   double MinValue = 3;
   double MaxValue = 4;
}
message SearchDocumentsRequest {
   string TemplateName = 1;
   Pagination Pagination = 2;
   SearchQuery SearchQuery = 3;
}
message SearchDocumentsResponse {
   repeated Document Documents = 1;
   int64 TotalCount = 2;
}
message SearchQuery {
   float Boost = 1;
   oneof subtype {
      AndSearchQuery AndSearchQuery = 100;
      NotSearchQuery NotSearchQuery = 101;
      OrSearchQuery OrSearchQuery = 102;
      ExactBoolSearchQuery ExactBoolSearchQuery = 200;
      ExactNumberSearchQuery ExactNumberSearchQuery = 300;
      GreaterNumberSearchQuery GreaterNumberSearchQuery = 301;
      LessNumberSearchQuery LessNumberSearchQuery = 302;
      RangeNumberSearchQuery RangeNumberSearchQuery = 303;
      ExactTextSearchQuery ExactTextSearchQuery = 400;
      FullTextSearchQuery FullTextSearchQuery = 401;
      PrefixTextSearchQuery PrefixTextSearchQuery = 402;
   }
}
message TextFieldValue {
   string Value = 1;
   string FieldName = 2;
}
service DocumentService {
   rpc CreateDocument (CreateDocumentRequest) returns (CreateDocumentResponse);
   rpc DeleteDocument (DeleteDocumentRequest) returns (DeleteDocumentResponse);
   rpc GetDocument (GetDocumentRequest) returns (GetDocumentResponse);
   rpc SearchDocuments (SearchDocumentsRequest) returns (SearchDocumentsResponse);
}
